[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/ship_control_ui.gd" id="1"]

[node name="ShipControlPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1")
controlled_ship = NodePath("../../PlayerShip")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -200.0
offset_right = 300.0
offset_bottom = -20.0
grow_vertical = 0

[node name="SpeedPanel" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="SpeedLabel" type="Label" parent="VBoxContainer/SpeedPanel"]
unique_name_in_owner = true
layout_mode = 2
text = "속도: 0.0 (0%)"
horizontal_alignment = 1

[node name="SailPanel" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="VBox" type="VBoxContainer" parent="VBoxContainer/SailPanel"]
layout_mode = 2

[node name="SailAngleLabel" type="Label" parent="VBoxContainer/SailPanel/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "돛 각도: 0.0도"
horizontal_alignment = 1

[node name="ButtonsHBox" type="HBoxContainer" parent="VBoxContainer/SailPanel/VBox"]
layout_mode = 2

[node name="SailLeftButton" type="Button" parent="VBoxContainer/SailPanel/VBox/ButtonsHBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "◀ 왼쪽"

[node name="SailRightButton" type="Button" parent="VBoxContainer/SailPanel/VBox/ButtonsHBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "오른쪽 ▶"

[node name="StaminaPanel" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="VBox" type="VBoxContainer" parent="VBoxContainer/StaminaPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/StaminaPanel/VBox"]
layout_mode = 2
text = "스태미나"
horizontal_alignment = 1

[node name="StaminaBar" type="ProgressBar" parent="VBoxContainer/StaminaPanel/VBox"]
unique_name_in_owner = true
layout_mode = 2
max_value = 100.0
value = 100.0
show_percentage = false

[node name="RowingButton" type="Button" parent="VBoxContainer/StaminaPanel/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "노 젓기"

[node name="WindPanel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -220.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 240.0
grow_horizontal = 0

[node name="VBox" type="VBoxContainer" parent="WindPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="WindPanel/VBox"]
layout_mode = 2
text = "바람 방향"
horizontal_alignment = 1

[node name="WindIndicator" type="Control" parent="WindPanel/VBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(180, 180)
layout_mode = 2
size_flags_horizontal = 4

[node name="Background" type="ColorRect" parent="WindPanel/VBox/WindIndicator"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = -80.0
offset_right = 80.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.15, 0.9)

[node name="NorthLabel" type="Label" parent="WindPanel/VBox/WindIndicator"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -15.0
offset_top = -95.0
offset_right = 15.0
offset_bottom = -75.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 18
text = "N"
horizontal_alignment = 1
vertical_alignment = 1

[node name="EastLabel" type="Label" parent="WindPanel/VBox/WindIndicator"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 75.0
offset_top = -10.0
offset_right = 95.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 18
text = "E"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SouthLabel" type="Label" parent="WindPanel/VBox/WindIndicator"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -15.0
offset_top = 75.0
offset_right = 15.0
offset_bottom = 95.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 18
text = "S"
horizontal_alignment = 1
vertical_alignment = 1

[node name="WestLabel" type="Label" parent="WindPanel/VBox/WindIndicator"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -95.0
offset_top = -10.0
offset_right = -75.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 18
text = "W"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Arrow" type="Node2D" parent="WindPanel/VBox/WindIndicator"]
unique_name_in_owner = true
position = Vector2(90, 90)

[node name="Shaft" type="ColorRect" parent="WindPanel/VBox/WindIndicator/Arrow"]
offset_left = -4.0
offset_top = -50.0
offset_right = 4.0
offset_bottom = 5.0
color = Color(1, 0.4, 0.2, 1)

[node name="Head" type="Polygon2D" parent="WindPanel/VBox/WindIndicator/Arrow"]
color = Color(1, 0.4, 0.2, 1)
polygon = PackedVector2Array(-12, -50, 12, -50, 0, -70)
